--- a/xrStalker/Config/game_maps_single.ltx
+++ b/xrStalker/Config/game_maps_single.ltx
@@ -36,6 +36,7 @@ l10_radar
 ;$debug$\_light2_
 l12_stancia
 l12_stancia_1ch_proba
+l12u_monolith_ai
 ai_test
 ai_test2
 pryp_test_ai
@@ -217,6 +218,13 @@ texture			= ui\ui_dar_labx18_map
 global_rect		= 767.0, 1827.0,	855.0,1978.0
 bound_rect		= -51.236, -37.911, 47.999, 81.159
 weathers		= sarkofag
+
+[l12u_monolith_ai]
+texture			= ui\ui_dar_labx18_map
+global_rect		= 767.0, 1827.0,	855.0,1978.0
+bound_rect		= -51.236, -37.911, 47.999, 81.159
+weathers		= sarkofag
+music_tracks    = l03u_agr_underground_musics
 
 [l03u_agroprom_r]
 global_rect		= 767.0, 1827.0,	855.0,1978.0
