--- a/xrStalker/Config/game_story_ids.ltx
+++ b/xrStalker/Config/game_story_ids.ltx
@@ -235,7 +235,13 @@
   1096			= "rad_falling_barrel_7"      
   1097			= "rad_falling_barrel_8"      
   1098			= "rad_falling_barrel_9"      
-  1099			= "rad_falling_barrel_10"      
+  1099			= "rad_falling_barrel_10"     
+  1080			= "rad_falling_barrel_11"      
+  1081			= "rad_falling_barrel_12"   
+  1082			= "rad_falling_barrel_13"      
+  1083			= "rad_falling_barrel_14"  
+  1084			= "rad_falling_barrel_15"      
+  1085			= "rad_falling_barrel_16"      
   
   ; AES (1100 - 1199)
   1101         = "aes_grenade"
@@ -258,9 +264,21 @@
   1118         = "aes_sidorovich"
   
   ; DeadCity (1200 - 1299)
-  1200         = "cit_jail_guard1"
-  1201         = "cit_doctor"
-
+  1200         = "cit_doctor"
+  1201         = "cit_jail_guard1"
+  1202         = "cit_jail_guard2"
+  
+  
+  ; Sarcofag + Monolith (1300 - 1399)
+  1300			= "sar_monolith"
+  1301			= "sar_generator_1"
+  1302			= "sar_generator_2"
+  1303			= "sar_secret_door"
+  1304			= "sar_command_center"
+  
+  ; Warlab (1400 - 1499)
+  1400			= "warlab"
+	
 
   ; TEST LEVEL (20000+)
   20000        = "test_stalker1"
