--- a/xrStalker/Config/scripts/cit/cit_jail_guard1.ltx
+++ b/xrStalker/Config/scripts/cit/cit_jail_guard1.ltx
@@ -1,8 +1,71 @@
 [logic]
-active = walker@guard
-combat_ignore = combat_ignore
+active              = walker@guard1
+combat_ignore       = combat_ignore
 
-[walker@guard]
-path_walk = cit_jail_guard_walk
-path_look = cit_jail_guard_look
-combat_ignore_cond = {=fighting_actor -cit_jail_opened +cit_actor_in_jail}
+;-----------------------------------------------------------------------------------------------------------
+;--- патрулируем возле решетки
+;-----------------------------------------------------------------------------------------------------------
+[walker@guard1]
+path_walk           = cit_jail_guard1_walk
+path_look           = cit_jail_guard1_look
+on_info             = {+cit_jail_guard2_talk_to_guard1} remark@look_at_guard2_1
+combat_ignore_cond  = {=fighting_actor -cit_jail_door_opened}, {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- слушаем, что нам говорит второй охранник
+;-----------------------------------------------------------------------------------------------------------
+[remark@look_at_guard2_1]
+anim                = patrol
+target              = 1202 ; guard2
+on_info             = {+cit_jail_kill_actor} remark@kill_actor, {+cit_jail_doctor_out_start} walker@open_door
+combat_ignore_cond  = {=fighting_actor -cit_jail_door_opened}, {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- если актер не послушался и не отошел к стене, убиваем его
+;-----------------------------------------------------------------------------------------------------------
+[remark@kill_actor]
+anim                = patrol
+on_info             = {=actor_dead +cit_jail_doctor_out_start} walker@open_door
+combat_ignore_cond  = {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- открываем решетку, чтоб выпустить доктора
+;-----------------------------------------------------------------------------------------------------------
+[walker@open_door]
+path_walk           = cit_jail_guard1_button_press_walk
+path_look           = cit_jail_guard1_button_press_look
+on_signal           = pressed | remark@look_at_actor %+cit_jail_door_opened%
+combat_ignore_cond  = {=fighting_actor -cit_actor_near_grates}, {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- смотрим за актером, шоб не сбежал
+;-----------------------------------------------------------------------------------------------------------
+[remark@look_at_actor]
+anim                = threat
+target              = actor
+on_info             = {+cit_jail_guard1_close_door} walker@close_door
+combat_ignore_cond  = {=fighting_actor -cit_actor_near_grates}, {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- закрываем решетку, чтоб выпустить доктора
+;-----------------------------------------------------------------------------------------------------------
+[walker@close_door]
+path_walk           = cit_jail_guard1_button_press_walk
+path_look           = cit_jail_guard1_button_press_look
+on_signal           = pressed | walker@guard2 %-cit_jail_door_opened%
+combat_ignore_cond  = {=fighting_actor -cit_actor_near_grates}, {=check_fighting(1200)}
+
+;-----------------------------------------------------------------------------------------------------------
+;--- патрулируем возле решетки
+;-----------------------------------------------------------------------------------------------------------
+[walker@guard2]
+path_walk           = cit_jail_guard1_walk
+path_look           = cit_jail_guard1_look
+on_timer            = 10000 | remark@sleep
+combat_ignore_cond  = {=fighting_actor -cit_jail_door_opened}, {=check_fighting(1200)}
+
+[remark@sleep]
+no_move             = true
+;no_rotate           = true
+anim                = sleep_sit
+combat_ignore_cond  = {=fighting_actor -cit_jail_door_opened}, {=check_fighting(1200)}
